samples/eth_e2e_e10/hw/sim/a10/hw/sim/include/platform_afu_top_config.vh
//
// This file has been generated automatically by afu_platform_config.
// Do not edit it by hand.
//
// Platform: discrete_pcie3_hssi40
// AFU top-level interface: ccip_std_afu
//

`ifndef __PLATFORM_AFU_TOP_CONFIG_VH__
`define __PLATFORM_AFU_TOP_CONFIG_VH__

`define AFU_TOP_MODULE_NAME ccip_std_afu
`define PLATFORM_SHIM_MODULE_NAME platform_shim_ccip_std_afu

// These top-level port classes are provided
`define PLATFORM_PROVIDES_CLOCKS 1
`define PLATFORM_PROVIDES_HSSI 1
`define PLATFORM_PROVIDES_CCI_P 1
`define PLATFORM_PROVIDES_POWER 1
`define PLATFORM_PROVIDES_ERROR 1


//
// These top-level ports are passed from the platform to the AFU
//

// clocks
`define AFU_TOP_REQUIRES_CLOCKS_PCLK3_USR2 1

// hssi
`define AFU_TOP_REQUIRES_HSSI_RAW_PR 1
`define PLATFORM_PARAM_HSSI_BANDWIDTH_OFFERED ( HSSI_BW_4x10G | HSSI_BW_40G )
`define PLATFORM_PARAM_HSSI_RAW_LANE_WIDTH 128
`define PLATFORM_PARAM_HSSI_RAW_NUM_LANES 4

// cci-p
`define AFU_TOP_REQUIRES_CCI_P_STRUCT 1
`define PLATFORM_PARAM_CCI_P_ADD_EXTRA_TIMING_REG_STAGES 0
`define PLATFORM_PARAM_CCI_P_C0_SUPPORTED_REQS (C0_REQ_RDLINE_S | C0_REQ_RDLINE_I)
`define PLATFORM_PARAM_CCI_P_C1_SUPPORTED_REQS (C1_REQ_WRLINE_S | C1_REQ_WRLINE_I | C1_REQ_WRFENCE)
`define PLATFORM_PARAM_CCI_P_CL_LEN_SUPPORTED { 1, 1, 0, 1 }
`define PLATFORM_PARAM_CCI_P_CLOCK default
`define PLATFORM_PARAM_CCI_P_CLOCK_IS_DEFAULT 1
`define PLATFORM_PARAM_CCI_P_MAX_BW_ACTIVE_LINES_C0 { 256, 256, 256, 256 }
`define PLATFORM_PARAM_CCI_P_MAX_BW_ACTIVE_LINES_C1 { 128, 128, 128, 128 }
`define PLATFORM_PARAM_CCI_P_MAX_OUTSTANDING_MMIO_RD_REQS 64
`define PLATFORM_PARAM_CCI_P_NUM_PHYS_CHANNELS 1
`define PLATFORM_PARAM_CCI_P_PCLK_FREQ 200
`define PLATFORM_PARAM_CCI_P_SUGGESTED_EXTRA_TIMING_REG_STAGES 0
`define PLATFORM_PARAM_CCI_P_VC_DEFAULT 2
`define PLATFORM_PARAM_CCI_P_VC_SUPPORTED { 1, 0, 1, 0 }

// power
`define AFU_TOP_REQUIRES_POWER_2BIT 1

// error
`define AFU_TOP_REQUIRES_ERROR_1BIT 1


`endif // __PLATFORM_AFU_TOP_CONFIG_VH__
